--- a/wordpress/wp-content/themes/customtheme/style.css
+++ b/wordpress/wp-content/themes/customtheme/style.css
@@ -2,6 +2,9 @@
 Theme Name: customtheme
 Author: HoQuang Tung
  */
+ *{
+    background: #4285f4;
+ }
  body {
     font-family: Arial, sans-serif;
     font-size: 16px;
